[UPD] title in final notebook

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -1062,7 +1062,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Distribution des genres musicaux préférés"
+    "## Distribution des genres musicaux préférés"
    ]
   },
   {
@@ -1105,7 +1105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Corrélation entre le temps d'écoute et les niveaux d'anxiété/dépression"
+    "## Corrélation entre le temps d'écoute et les niveaux d'anxiété/dépression"
    ]
   },
   {
@@ -1146,7 +1146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Impact perçu de la musique sur l'humeur"
+    "## Impact perçu de la musique sur l'humeur"
    ]
   },
   {
@@ -1199,7 +1199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fréquence d'écoute par genre musical\n"
+    "## Fréquence d'écoute par genre musical\n"
    ]
   },
   {
@@ -1268,7 +1268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Relation entre l'âge et les préférences musicales"
+    "## Relation entre l'âge et les préférences musicales"
    ]
   },
   {
@@ -1312,7 +1312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Services de streaming préférés par tranche d'âge"
+    "## Services de streaming préférés par tranche d'âge"
    ]
   },
   {
@@ -1374,7 +1374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparaison des niveaux d'anxiété/dépression entre musiciens et non-musiciens"
+    "## Comparaison des niveaux d'anxiété/dépression entre musiciens et non-musiciens"
    ]
   },
   {
@@ -1426,6 +1426,13 @@
     "plt.xlabel('Musicien')\n",
     "plt.ylabel('Niveau de dépression')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distribution pour les participants avec anxiété, depression et insomnie"
    ]
   },
   {
